fix twi graphic

--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -1443,12 +1443,12 @@ C(V_i, V_j) = \left\{
        
     \subsection{Experimenting with Real Data}
 
-    The small dataset shows us the potential advantages of using the algebraic
-    model over using the statistical model.
-    Now it's time to see whether those observations make a difference on a 
-    standard entity resolution benchmarking dataset.
+    The small dataset highlights the potential benefits of the algebraic model
+    compared to the statistical model.
+    Next, we will examine if these observations impact a standard entity
+    resolution benchmark dataset.
 
-    \begin{figure}
+    \begin{figure}[h!]
         \begin{minipage}{0.49\textwidth}
             \centering
             \includegraphics[width=\textwidth]{full-fs}
